update RSA, UT and README