@@ -1,17 +1,22 @@
 package com.example.currency_exchange.controller;
 
 import com.example.currency_exchange.dto.CurrencyExchangeRateDto;
+import com.example.currency_exchange.dto.EncryptResponse;
+import com.example.currency_exchange.dto.PublicKeyResponse;
 import com.example.currency_exchange.dto.RateDto;
 import com.example.currency_exchange.entity.CurrencyExchangeRate;
 import com.example.currency_exchange.service.CurrencyClientService;
 import com.example.currency_exchange.service.CurrencyService;
+import com.example.currency_exchange.util.RSAUtil;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.lang.reflect.Field;
 import java.math.BigDecimal;
+import java.security.KeyPair;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collections;
@@ -39,7 +44,7 @@ class CurrencyControllerTest {
     @Test
     void addExchangeRate_delegatesToService() {
         RateDto rate = new RateDto();
-        rate.setAverageBid(new BigDecimal(1.23));
+        rate.setAverageBid(new BigDecimal("1.23"));
 
         controller.addExchangeRate("EUR", "2025/11/01 00:00:00", rate);
 
@@ -47,7 +52,7 @@ class CurrencyControllerTest {
     }
 
     @Test
-    void exchangeRateList_returnsServiceResult() {
+    void getExchangeRateList_returnsServiceResult() {
         CurrencyExchangeRateDto e = new CurrencyExchangeRateDto();
         e.setBaseCurrency("EUR");
         e.setQuoteCurrency("USD");
@@ -55,14 +60,14 @@ class CurrencyControllerTest {
 
         when(currencyService.getExchangeRate("EUR")).thenReturn(expected);
 
-        List<CurrencyExchangeRateDto> actual = controller.exchangeRateList("EUR");
+        List<CurrencyExchangeRateDto> actual = controller.getExchangeRateList("EUR");
 
         assertSame(expected, actual);
         verify(currencyService, times(1)).getExchangeRate("EUR");
     }
 
     @Test
-    void exchangeRateListAtTime_returnsServiceResult() {
+    void getGetExchangeRateListAtTime_returnsServiceResult() {
         CurrencyExchangeRateDto e = new CurrencyExchangeRateDto();
         e.setBaseCurrency("EUR");
         e.setQuoteCurrency("USD");
@@ -70,34 +75,34 @@ class CurrencyControllerTest {
 
         when(currencyService.getExchangeRateAtTime("EUR", "2025/11/01 00:00:00")).thenReturn(expected);
 
-        List<CurrencyExchangeRateDto> actual = controller.exchangeRateListAtTime("EUR", "2025/11/01 00:00:00");
+        List<CurrencyExchangeRateDto> actual = controller.getExchangeRateListAtTime("EUR", "2025/11/01 00:00:00");
 
         assertEquals(1, actual.size());
         // expected baseCurrency is EUR and quoteCurrency is USD as set above
-        assertEquals("EUR", actual.get(0).getBaseCurrency());
-        assertEquals("USD", actual.get(0).getQuoteCurrency());
+        assertEquals("EUR", actual.getFirst().getBaseCurrency());
+        assertEquals("USD", actual.getFirst().getQuoteCurrency());
         verify(currencyService, times(1)).getExchangeRateAtTime("EUR", "2025/11/01 00:00:00");
     }
 
     @Test
-    void exchangeRateListByBaseCurrencyCode_returnsServiceResult() {
+    void getGetExchangeRateListByBaseCurrencyCode_returnsServiceResult() {
         CurrencyExchangeRateDto e = new CurrencyExchangeRateDto();
         e.setBaseCurrency("USD");
         List<CurrencyExchangeRateDto> expected = Collections.singletonList(e);
 
         when(currencyService.getExchangeRateByBaseCurrencyCode("USD", "2025/11/01 00:00:00")).thenReturn(expected);
 
-        List<CurrencyExchangeRateDto> actual = controller.exchangeRateListByBaseCurrencyCode("USD", "2025/11/01 00:00:00");
+        List<CurrencyExchangeRateDto> actual = controller.getExchangeRateListByBaseCurrencyCode("USD", "2025/11/01 00:00:00");
 
         assertFalse(actual.isEmpty());
-        assertEquals("USD", actual.get(0).getBaseCurrency());
+        assertEquals("USD", actual.getFirst().getBaseCurrency());
         verify(currencyService, times(1)).getExchangeRateByBaseCurrencyCode("USD", "2025/11/01 00:00:00");
     }
 
     @Test
     void modifyExchangeRate_returnsUpdatedEntity() {
         RateDto rate = new RateDto();
-        rate.setAverageBid(new BigDecimal(2.5));
+        rate.setAverageBid(new BigDecimal("2.5"));
         CurrencyExchangeRate updated = new CurrencyExchangeRate();
         updated.setBaseCurrency("USD");
         updated.setQuoteCurrency("JPY");
@@ -147,4 +152,54 @@ class CurrencyControllerTest {
 
         verify(currencyService, times(1)).deleteExchangeRateAtTime("EUR", "2025/11/01 00:00:00");
     }
+
+    @Test
+    void rsaGenerate_returnsPublicKey() {
+        PublicKeyResponse resp = controller.rsaGenerate();
+
+        assertNotNull(resp);
+        assertNotNull(resp.getPublicKey());
+        assertFalse(resp.getPublicKey().isEmpty());
+    }
+
+    @Test
+    void getExchangeRateListWithEncryptCurrencyCode_encryptsAndCanBeDecrypted() {
+        KeyPair kp = RSAUtil.generateKeyPair(2048);
+        String publicKeyBase64 = RSAUtil.publicKeyToBase64(kp.getPublic());
+
+        EncryptResponse resp = controller.getExchangeRateListWithEncryptCurrencyCode("EUR", publicKeyBase64);
+
+        assertNotNull(resp);
+        assertNotNull(resp.getEncryptedData());
+        String decrypted = RSAUtil.decrypt(resp.getEncryptedData(), kp.getPrivate());
+        assertEquals("EUR", decrypted);
+    }
+
+    @Test
+    void rsaDecrypt_callsServiceWithDecryptedCurrencyCode() throws Exception {
+        // prepare key pair and set controller's private key
+        KeyPair kp = RSAUtil.generateKeyPair(2048);
+        String publicKeyBase64 = RSAUtil.publicKeyToBase64(kp.getPublic());
+        String privateBase64 = RSAUtil.privateKeyToBase64(kp.getPrivate());
+
+        // set private field lastPrivateKeyBase64 via reflection
+        Field f = CurrencyController.class.getDeclaredField("lastPrivateKeyBase64");
+        f.setAccessible(true);
+        f.set(controller, privateBase64);
+
+        // encrypt a currency code with the public key
+        String cipher = RSAUtil.encrypt("USD", RSAUtil.publicKeyFromBase64(publicKeyBase64));
+
+        CurrencyExchangeRateDto dto = new CurrencyExchangeRateDto();
+        dto.setBaseCurrency("USD");
+        List<CurrencyExchangeRateDto> expected = Collections.singletonList(dto);
+
+        when(currencyService.getExchangeRate("USD")).thenReturn(expected);
+
+        List<CurrencyExchangeRateDto> actual = controller.rsaDecrypt(cipher);
+
+        assertSame(expected, actual);
+        verify(currencyService, times(1)).getExchangeRate("USD");
+    }
+
 }
